--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "init",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "engines": {
     "node":"16.x",
     "npm":"8.x"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "author": "hossam",
   "license": "ISC",
