--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
       "src": "./index.js",
       "use": "@vercel/node"
     }],
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+  "rewrites": [{ "source": "/index/(.*)", "destination": "/index" }]
   
 }
