--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,16 @@
   "version": 2,
   "builds": [
     {
-      "src": "./app.js",
+      "src": "./index.js",
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api"
+      "src": "/.*",
+      "dest": "/index.js"
     }
+    
   ]
+  
 }
